// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render List with default properties 1`] = `
.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 8px;
  margin-right: 8px;
}

.c2 {
  margin-left: 4px;
}

.c6 {
  margin-left: 16px;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

<div>
  <ul
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
        >
          <svg
            aria-hidden="true"
            data-blade-component="icon"
            fill="none"
            height="6px"
            viewBox="0 0 6 6"
            width="6px"
          >
            <circle
              cx="3px"
              cy="3px"
              fill="hsla(214, 18%, 69%, 1)"
              r="3px"
            />
          </svg>
        </div>
        <p
          class="c5 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
      <ul
        class="c0"
        data-blade-component="list"
        role="list"
      >
        <li
          class=" c6"
          data-blade-component="list-item"
        >
          <div
            class="c3"
            display="flex"
          >
            <div
              class="c4"
              display="flex"
            >
              <svg
                aria-hidden="true"
                data-blade-component="icon"
                fill="none"
                height="6px"
                viewBox="0 0 6 6"
                width="6px"
              >
                <circle
                  cx="3px"
                  cy="3px"
                  r="2.5px"
                  stroke="hsla(214, 18%, 69%, 1)"
                />
              </svg>
            </div>
            <p
              class="c5 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="100"
              font-style="normal"
              font-weight="regular"
            >
              Level 2
            </p>
          </div>
          <ul
            class="c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c6"
              data-blade-component="list-item"
            >
              <div
                class="c3"
                display="flex"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <rect
                      fill="hsla(214, 18%, 69%, 1)"
                      height="6px"
                      rx="1px"
                      width="6px"
                    />
                  </svg>
                </div>
                <p
                  class="c5 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="100"
                  font-style="normal"
                  font-weight="regular"
                >
                  Level 3
                </p>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<List /> should render List with inline ListItemCode 1`] = `
.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c7 {
  color: hsla(216,27%,36%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 8px;
  margin-right: 8px;
}

.c6 {
  padding: 0px 4px;
  background-color: hsla(216,15%,54%,0.09);
  border-radius: 4px;
  display: inline-block;
  line-height: 1rem;
}

.c2 {
  margin-left: 4px;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<div>
  <ul
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
        >
          <svg
            aria-hidden="true"
            data-blade-component="icon"
            fill="none"
            height="6px"
            viewBox="0 0 6 6"
            width="6px"
          >
            <circle
              cx="3px"
              cy="3px"
              fill="hsla(214, 18%, 69%, 1)"
              r="3px"
            />
          </svg>
        </div>
        <p
          class="c5 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 1 
          <span
            class="c6"
            data-blade-component="code"
          >
            <code
              class="c7"
              color="surface.text.subtle.lowContrast"
              font-family="code"
              font-size="75"
            >
              Google
            </code>
          </span>
        </p>
      </div>
    </li>
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
        >
          <svg
            aria-hidden="true"
            data-blade-component="icon"
            fill="none"
            height="6px"
            viewBox="0 0 6 6"
            width="6px"
          >
            <circle
              cx="3px"
              cy="3px"
              fill="hsla(214, 18%, 69%, 1)"
              r="3px"
            />
          </svg>
        </div>
        <p
          class="c5 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 2
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`<List /> should render medium ordered List 1`] = `
.c7 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 4px;
  height: 20px;
  width: 20px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 8px;
  margin-right: 8px;
}

.c2 {
  margin-left: 0;
}

.c8 {
  margin-left: 16px;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 20px;
    width: 20px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 20px;
    width: 20px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 20px;
    width: 20px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 20px;
    width: 20px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 20px;
    width: 20px;
  }
}

@media screen and (min-width:320px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

<div>
  <ol
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="20px"
          width="20px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="100"
            font-style="normal"
            font-weight="regular"
          >
            1.
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
      <ul
        class="List__StyledUnorderedList-bqf6r7-1 c7"
        data-blade-component="list"
        role="list"
      >
        <li
          class=" c8"
          data-blade-component="list-item"
        >
          <div
            class="c3"
            display="flex"
          >
            <div
              class="c9"
              display="flex"
            >
              <svg
                aria-hidden="true"
                data-blade-component="icon"
                fill="none"
                height="6px"
                viewBox="0 0 6 6"
                width="6px"
              >
                <circle
                  cx="3px"
                  cy="3px"
                  r="2.5px"
                  stroke="hsla(214, 18%, 69%, 1)"
                />
              </svg>
            </div>
            <p
              class="c6 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="100"
              font-style="normal"
              font-weight="regular"
            >
              Level 2
            </p>
          </div>
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c7"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c8"
              data-blade-component="list-item"
            >
              <div
                class="c3"
                display="flex"
              >
                <div
                  class="c9"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <rect
                      fill="hsla(214, 18%, 69%, 1)"
                      height="6px"
                      rx="1px"
                      width="6px"
                    />
                  </svg>
                </div>
                <p
                  class="c6 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="100"
                  font-style="normal"
                  font-weight="regular"
                >
                  Level 3
                </p>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ol>
</div>
`;

exports[`<List /> should render medium ordered-filled List 1`] = `
.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 8px;
  height: 20px;
  width: 20px;
  background-color: hsla(216,15%,54%,0.18);
  border-radius: 9999px;
}

.c2 {
  margin-left: 0;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 20px;
    width: 20px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 20px;
    width: 20px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 20px;
    width: 20px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 20px;
    width: 20px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 20px;
    width: 20px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

<div>
  <ol
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="20px"
          width="20px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="25"
            font-style="normal"
            font-weight="regular"
          >
            1
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
    </li>
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="20px"
          width="20px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="25"
            font-style="normal"
            font-weight="regular"
          >
            2
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 2
        </p>
      </div>
    </li>
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="20px"
          width="20px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="25"
            font-style="normal"
            font-weight="regular"
          >
            3
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 3
        </p>
      </div>
    </li>
  </ol>
</div>
`;

exports[`<List /> should render medium unordered List with icon 1`] = `
.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 2px;
  margin-right: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 8px;
  margin-right: 8px;
}

.c2 {
  margin-left: 0;
}

.c6 {
  margin-left: 16px;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 2px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 2px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 2px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 2px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 2px;
    margin-right: 8px;
  }
}

@media screen and (min-width:320px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 8px;
    margin-right: 8px;
  }
}

<div>
  <ul
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
        >
          <svg
            aria-hidden="true"
            data-blade-component="icon"
            fill="none"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
          >
            <path
              d="M14.707 5.293a1 1 0 1 0-1.414 1.414L17.586 11H4a1 1 0 1 0 0 2h13.586l-4.293 4.293a1 1 0 0 0 1.414 1.414l6-6a1 1 0 0 0 0-1.414l-6-6Z"
              fill="hsla(217, 18%, 45%, 1)"
            />
          </svg>
        </div>
        <p
          class="c5 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
      <ul
        class="c0"
        data-blade-component="list"
        role="list"
      >
        <li
          class=" c6"
          data-blade-component="list-item"
        >
          <div
            class="c3"
            display="flex"
          >
            <div
              class="c4"
              display="flex"
            >
              <svg
                aria-hidden="true"
                data-blade-component="icon"
                fill="none"
                height="16px"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  d="M12.707 3.293a1 1 0 0 0-1.414 0l-6 6a1 1 0 0 0 1.414 1.414L11 6.414V20a1 1 0 1 0 2 0V6.414l4.293 4.293a1 1 0 0 0 1.414-1.414l-6-6Z"
                  fill="hsla(217, 18%, 45%, 1)"
                />
              </svg>
            </div>
            <p
              class="c5 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="100"
              font-style="normal"
              font-weight="regular"
            >
              Level 2
            </p>
          </div>
          <ul
            class="c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c6"
              data-blade-component="list-item"
            >
              <div
                class="c3"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <rect
                      fill="hsla(214, 18%, 69%, 1)"
                      height="6px"
                      rx="1px"
                      width="6px"
                    />
                  </svg>
                </div>
                <p
                  class="c5 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="100"
                  font-style="normal"
                  font-weight="regular"
                >
                  Level 3
                </p>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<List /> should render small ordered List 1`] = `
.c7 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 4px;
  height: 16px;
  width: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 6px;
  margin-right: 8px;
}

.c2 {
  margin-left: 0;
}

.c8 {
  margin-left: 16px;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 16px;
    width: 16px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 16px;
    width: 16px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 16px;
    width: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 16px;
    width: 16px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 4px;
    height: 16px;
    width: 16px;
  }
}

@media screen and (min-width:320px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

<div>
  <ol
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="16px"
          width="16px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="regular"
          >
            1.
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="75"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
      <ul
        class="List__StyledUnorderedList-bqf6r7-1 c7"
        data-blade-component="list"
        role="list"
      >
        <li
          class=" c8"
          data-blade-component="list-item"
        >
          <div
            class="c3"
            display="flex"
          >
            <div
              class="c9"
              display="flex"
            >
              <svg
                aria-hidden="true"
                data-blade-component="icon"
                fill="none"
                height="6px"
                viewBox="0 0 6 6"
                width="6px"
              >
                <circle
                  cx="3px"
                  cy="3px"
                  r="2.5px"
                  stroke="hsla(214, 18%, 69%, 1)"
                />
              </svg>
            </div>
            <p
              class="c6 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="75"
              font-style="normal"
              font-weight="regular"
            >
              Level 2
            </p>
          </div>
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c7"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c8"
              data-blade-component="list-item"
            >
              <div
                class="c3"
                display="flex"
              >
                <div
                  class="c9"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <rect
                      fill="hsla(214, 18%, 69%, 1)"
                      height="6px"
                      rx="1px"
                      width="6px"
                    />
                  </svg>
                </div>
                <p
                  class="c6 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="75"
                  font-style="normal"
                  font-weight="regular"
                >
                  Level 3
                </p>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ol>
</div>
`;

exports[`<List /> should render small ordered-filled List 1`] = `
.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 8px;
  height: 18px;
  width: 18px;
  background-color: hsla(216,15%,54%,0.18);
  border-radius: 9999px;
}

.c2 {
  margin-left: 0;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 18px;
    width: 18px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 18px;
    width: 18px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 18px;
    width: 18px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 18px;
    width: 18px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0px;
    margin-right: 8px;
    height: 18px;
    width: 18px;
    background-color: hsla(216,15%,54%,0.18);
    border-radius: 9999px;
  }
}

<div>
  <ol
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="18px"
          width="18px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="25"
            font-style="normal"
            font-weight="regular"
          >
            1
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="75"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
    </li>
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="18px"
          width="18px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="25"
            font-style="normal"
            font-weight="regular"
          >
            2
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="75"
          font-style="normal"
          font-weight="regular"
        >
          Level 2
        </p>
      </div>
    </li>
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          height="18px"
          width="18px"
        >
          <p
            class="c5 Text__StyledText-wkh56f-0"
            color="surface.text.subtle.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="25"
            font-style="normal"
            font-weight="regular"
          >
            3
          </p>
        </div>
        <p
          class="c6 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="75"
          font-style="normal"
          font-weight="regular"
        >
          Level 3
        </p>
      </div>
    </li>
  </ol>
</div>
`;

exports[`<List /> should render small unordered List with icon 1`] = `
.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 4px;
  margin-right: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 6px;
  margin-right: 8px;
}

.c2 {
  margin-left: 0;
}

.c6 {
  margin-left: 16px;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 4px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 4px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 4px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 4px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 4px;
    margin-right: 8px;
  }
}

@media screen and (min-width:320px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

<div>
  <ul
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
        >
          <svg
            aria-hidden="true"
            data-blade-component="icon"
            fill="none"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M14.707 5.293a1 1 0 1 0-1.414 1.414L17.586 11H4a1 1 0 1 0 0 2h13.586l-4.293 4.293a1 1 0 0 0 1.414 1.414l6-6a1 1 0 0 0 0-1.414l-6-6Z"
              fill="hsla(217, 18%, 45%, 1)"
            />
          </svg>
        </div>
        <p
          class="c5 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="75"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
      <ul
        class="c0"
        data-blade-component="list"
        role="list"
      >
        <li
          class=" c6"
          data-blade-component="list-item"
        >
          <div
            class="c3"
            display="flex"
          >
            <div
              class="c4"
              display="flex"
            >
              <svg
                aria-hidden="true"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 24 24"
                width="12px"
              >
                <path
                  d="M12.707 3.293a1 1 0 0 0-1.414 0l-6 6a1 1 0 0 0 1.414 1.414L11 6.414V20a1 1 0 1 0 2 0V6.414l4.293 4.293a1 1 0 0 0 1.414-1.414l-6-6Z"
                  fill="hsla(217, 18%, 45%, 1)"
                />
              </svg>
            </div>
            <p
              class="c5 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="75"
              font-style="normal"
              font-weight="regular"
            >
              Level 2
            </p>
          </div>
          <ul
            class="c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c6"
              data-blade-component="list-item"
            >
              <div
                class="c3"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <rect
                      fill="hsla(214, 18%, 69%, 1)"
                      height="6px"
                      rx="1px"
                      width="6px"
                    />
                  </svg>
                </div>
                <p
                  class="c5 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="75"
                  font-style="normal"
                  font-weight="regular"
                >
                  Level 3
                </p>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<List /> should render unordered List of small size 1`] = `
.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c1 {
  margin-top: 8px;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 6px;
  margin-right: 8px;
}

.c2 {
  margin-left: 4px;
}

.c6 {
  margin-left: 16px;
}

@media screen and (min-width:320px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:320px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    margin-top: 6px;
    margin-right: 8px;
  }
}

<div>
  <ul
    class="c0 c1"
    data-blade-component="list"
    role="list"
  >
    <li
      class=" c2"
      data-blade-component="list-item"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
        >
          <svg
            aria-hidden="true"
            data-blade-component="icon"
            fill="none"
            height="6px"
            viewBox="0 0 6 6"
            width="6px"
          >
            <circle
              cx="3px"
              cy="3px"
              fill="hsla(214, 18%, 69%, 1)"
              r="3px"
            />
          </svg>
        </div>
        <p
          class="c5 Text__StyledText-wkh56f-0"
          color="surface.text.normal.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="75"
          font-style="normal"
          font-weight="regular"
        >
          Level 1
        </p>
      </div>
      <ul
        class="c0"
        data-blade-component="list"
        role="list"
      >
        <li
          class=" c6"
          data-blade-component="list-item"
        >
          <div
            class="c3"
            display="flex"
          >
            <div
              class="c4"
              display="flex"
            >
              <svg
                aria-hidden="true"
                data-blade-component="icon"
                fill="none"
                height="6px"
                viewBox="0 0 6 6"
                width="6px"
              >
                <circle
                  cx="3px"
                  cy="3px"
                  r="2.5px"
                  stroke="hsla(214, 18%, 69%, 1)"
                />
              </svg>
            </div>
            <p
              class="c5 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="75"
              font-style="normal"
              font-weight="regular"
            >
              Level 2
            </p>
          </div>
          <ul
            class="c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c6"
              data-blade-component="list-item"
            >
              <div
                class="c3"
                display="flex"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <rect
                      fill="hsla(214, 18%, 69%, 1)"
                      height="6px"
                      rx="1px"
                      width="6px"
                    />
                  </svg>
                </div>
                <p
                  class="c5 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="75"
                  font-style="normal"
                  font-weight="regular"
                >
                  Level 3
                </p>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
